--- a/src/styles/commonbanner.css
+++ b/src/styles/commonbanner.css
@@ -23,3 +23,12 @@
     height: 400px;
     position: relative;
 }
+
+@media only screen and (max-width:767px) {
+ .content_section { 
+    bottom: 20% !important; 
+    left: 10% !important; 
+    width: 82% !important;
+}
+
+}
