`Updated contact page with new design and functionality, added counters and statistics to home page, and made various minor changes throughout the application.`

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,3 @@
- 
+ .contactInfoBg{
+        background-image: linear-gradient(110.7deg, rgba(15, 33, 43, 1) 1.2%, rgba(74, 123, 157, 1) 88.2%) !important;
+ }
