--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
  @import "tailwindcss";
+
+  .contactInfoBg{
+        background-image: linear-gradient(110.7deg, rgba(15, 33, 43, 1) 1.2%, rgba(74, 123, 157, 1) 88.2%) !important;
+ }
